--- a/AppHost/PastryManager.AppHost.csproj
+++ b/AppHost/PastryManager.AppHost.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="Aspire.Hosting.AppHost" Version="9.5.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PastryManager\PastryManager.Api.csproj" />
+  </ItemGroup>
+
 </Project>
