feat: upload, get and delete file

--- a/PastryManager/appsettings.Development.json
+++ b/PastryManager/appsettings.Development.json
@@ -11,5 +11,14 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=pastrydb;Username=postgres;Password=postgres"
+  },
+  "AWS": {
+    "Profile": "default",
+    "Region": "us-east-1",
+    "S3": {
+      "BucketName": "pastrymanager-uploads-dev",
+      "ServiceURL": "http://localhost:4566",
+      "ForcePathStyle": true
+    }
   }
 }
