--- a/PastryManager/appsettings.json
+++ b/PastryManager/appsettings.json
@@ -29,5 +29,15 @@
     ],
     "Enrich": [ "FromLogContext", "WithExceptionDetails" ]
   },
+  "AWS": {
+    "Region": "us-east-1",
+    "S3": {
+      "BucketName": "pastrymanager-uploads"
+    }
+  },
+  "FileUpload": {
+    "MaxFileSizeBytes": 10485760,
+    "AllowedExtensions": [ ".pdf", ".docx", ".xlsx", ".png", ".jpg", ".jpeg", ".txt", ".csv" ]
+  },
   "AllowedHosts": "*"
 }
